[tool.poetry]
name = "kvault"
version = "0.1.0"
description = "Simple Miniature key-value datastore"
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gevent = "^22.10.2"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.17.4"
pytest = "^7.3.1"
black = "^23.3.0"
pre-commit = "^3.3.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
