[tool.poetry]
name = "kvault"
# This version field is not being used. The version field is dynamically updated as below
version = "0.0.0"
description = "Simple Miniature key-value datastore"
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["kvault", "key-value-datastore", "key-value"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.10"
gevent = ">=23.7,<25.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pylint = ">=2.17.5,<4.0.0"
pytest = ">=7.4,<9.0"
black = ">=23.7,<25.0"
pre-commit = "^3.3.3"
python-dotenv = "^1.0.0"
pytest-cov = ">=4.1,<6.0"
mypy = "^1.5.1"
flake8 = ">=6.1,<8.0"

[tool.setuptools.dynamic]
version = { attr = "kvault.__version__" }

# Reference: https://mypy.readthedocs.io/en/stable/index.html
[tool.mypy]
strict_equality = true

[[tool.mypy.overrides]]
module = "gevent.*"
ignore_missing_imports = true

# reference: https://github.com/mtkennerly/poetry-dynamic-versioning
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
latest-tag = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
